tests/ui/traits/new-solver/exponential-trait-goals.stderr
error[E0282]: type annotations needed
  --> $DIR/exponential-trait-goals.rs:17:5
   |
LL |     impls::<W<_>>();
   |     ^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `impls`

error[E0275]: overflow evaluating the requirement `W<_>: Trait`
  --> $DIR/exponential-trait-goals.rs:17:5
   |
LL |     impls::<W<_>>();
   |     ^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`exponential_trait_goals`)
note: required by a bound in `impls`
  --> $DIR/exponential-trait-goals.rs:14:13
   |
LL | fn impls<T: Trait>() {}
   |             ^^^^^ required by this bound in `impls`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0275, E0282.
For more information about an error, try `rustc --explain E0275`.
